# agent-huntersystem0523

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AI_Recruitment_Multi_Agent_System_Prompt_Architecture.md  AI_Recruitment_System_PRD.md  AI_招聘_Agent_系统架构文档_含录音功能.md  AI招聘Agent_上下文记忆架构设计.md  AI招聘Agent_完整提示词实现方案.md  AI招聘Agent内置命令系统V2.0.md  AI招聘Agent深度缺口填补规划.md  Agent后台运行逻辑详解_.md  Ai 招聘Agent 提示词系统.md  CLAUDE.md  LICENSE  LangGraph任务快照.md  Makefile  OMO-PLAN.md  README.md  SECURITY.md  agent.md  ai 招聘agent MCP服务器架构 v3 设计稿（已废，参考 v4 实施）.md  ai 招聘agent MCP服务器架构 v4 实际实现（PR-0~7 累计完成）.md  ai 招聘agent MCP服务器架构：区分 内置 MCP 工具（给子 Agent 直接调用）和 外部 Skill 加载（识别 SKILL.md 动态注册为 MCP 工具）。.md  ai招聘agent 寻源招聘规划方案.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  talent_sourcing_agent_plan_v2.md  turbo.json  寻源 Agent 浏览器引擎方案：优先 invisible_playwright + 备用 browser-use.md  寻源Agent重构规划_v3.md  寻源Agent重构规划_v4.md  简历解析_Agent_系统提示词_Prompt-H.md
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  alembic.ini  ecosystem.config.js  pyproject.toml  pyrightconfig.json  requirements.txt  skills-lock.json
apps/api/_scripts/: daemonize_api.py  seed_job_profiles.py
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/tests/: conftest.py  test_agent.py  test_agent_events.py  test_agent_events_e2e_redis_integration.py  test_agent_service.py  test_agentops_circuit_breaker.py  test_agentops_composite_provider.py  test_agentops_context.py  test_agentops_dashboards.py  test_agentops_dataset.py  test_agentops_evaluation.py  test_agentops_experiment.py  test_agentops_feedback.py  test_agentops_governance.py  test_agentops_llm_judge.py  (+176 more)
(+1191 files in other folders)
