[project]
name = "ai-recruitment-api"
version = "0.1.0"
description = "AI Recruitment System - FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.2.0",
    "redis>=5.0.0",
    "qdrant-client>=1.9.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "openai>=1.12.0",
    "prometheus-client>=0.20.0",
    "minio>=7.2.0",
    "langgraph>=0.2.0,<0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0,<3.0.0",
    "psycopg[binary]>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["app", "app.*"]
exclude = ["alembic", "alembic.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/main.py",
    "app/core/config.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["W291"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"
